[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise"
version = "0.1.0"
description = "Agentic task orchestration MVP with tiered model routing and live cost tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["tokenwise*"]

[tool.uv]
default-groups = ["dev"]
