[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise"
version = "0.1.0"
description = "Agentic task orchestration MVP with tiered model routing and live cost tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "limits>=5.8.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "slowapi>=0.1.9",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["tokenwise*"]

[tool.uv]
default-groups = ["dev"]
